--- a/docs/style.css
+++ b/docs/style.css
@@ -7,7 +7,8 @@
   --text: #24292f;
   --bg: #ffffff;
   --code: #e9e9e9;
-  --ref: #ffdd00;
+  --ref: #ddc215;
+  --quote: #57606a;
 }
 
 html {
@@ -28,6 +29,7 @@ body {
     --bg: #0d1117;
     --code: #24292f;
     --ref: #fde33d;
+    --quote: #8b949e;
     color-scheme: dark;
   }
 }
@@ -57,8 +59,17 @@ code {
   border-radius: 6px;
 }
 
-.ligne {
-  line-height: 1.3em;
+li {
+  line-height: 1.5em;
+}
+
+blockquote {
+  color: var(--quote);
+  border-left: 3px solid var(--quote);
+  padding-left: 10px;
+  margin-left: 15px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .ref {
@@ -68,13 +79,13 @@ code {
   text-shadow: 0 0 10px var(--ref);
 }
 
-.material-icons {
+.material-icons-round {
   font-size: 30px;
 }
 
 #one {
   color: #ffffff;
-  background: linear-gradient(145deg, rgba(43, 0, 0, 1) 0%, rgba(121, 9, 9, 1) 35%, rgba(255, 0, 0, 1) 100%);
+  background: linear-gradient(145deg, #2b0000 0%, #790909 35%, #ff0000 100%);
   align-items: center;
   text-align: center;
   justify-content: center;
@@ -84,6 +95,12 @@ code {
   line-height: .1em;
   margin: 0;
   padding: 0;
+}
+
+#one h1 {
+    font-size: min(17.5vw, 185px);
+    margin-top: 0;
+    margin-bottom: min(10%, 50px);
 }
 
 .svgicon {
@@ -127,4 +144,38 @@ code {
 
 .menu a {
   text-decoration: none;
+}
+
+.topback {
+  height: 40px;
+  background: linear-gradient(145deg, #2b0000 0%, #790909 35%, #ff0000 100%);
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+
+.topback a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.topback h4 {
+  color: #ffffff;
+}
+
+img.emoji {
+  height: 1em;
+  width: 1em;
+  border-radius: 0;
+  display: inline-flex;
+  align-self: center;
+  position: relative;
+  top: .125em;
+}
+
+.sommaire a {
+  color: var(--ref);
+  text-decoration: none;
+  border-bottom: 1.5px solid;
 }
