--- a/docs/style.css
+++ b/docs/style.css
@@ -8,7 +8,7 @@
   --text: #24292f;
   --bg: #ffffff;
   --code: #e9e9e9;
-  --ref: #ffcc4d;
+  --ref: #fcc12c;
   --ref2: #5dadec;
   --ref3: #be1931;
   --fnt-size: 20px;
@@ -34,7 +34,7 @@ body {
     --text: #ffffff;
     --bg: #0d1117;
     --code: #24292f;
-    --ref: #e1ac29;
+    --ref: #ffcc4d;
     color-scheme: dark;
   }
 }
