--- a/style.css
+++ b/style.css
@@ -631,7 +631,7 @@ a.goldlink,
 
 .invite {
   background: var(--bg);
-  background: url("../other/Armus-line.jpg");
+  background: url("other/Armus-line.jpg");
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -805,37 +805,3 @@ a.goldlink,
 .list-nopadding * {
   padding: 0px;
 }
-
-/* 404 */
-
-.fourzerofour {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  height: 100vh;
-  width: 100vw;
-  white-space: pre-wrap;
-}
-
-.fourzerofour h1 {
-  font-size: 2em;
-  font-family: Consolas, Menlo, Monaco, "Lucida Console", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace, serif;
-}
-
-.fourzerofour .styled-btn {
-  font-family: Montserrat, Arial, Helvetica, sans-serif, "Apple Color Emoji", "Noto Color Emoji";
-}
-
-.fourzerofour * {
-  margin: 0px;
-}
-
-@media only screen and (max-width: 768px) {
-  .fourzerofour h1 {
-    font-size: 1.25em;
-  }
-}
-
-/* 404 end */
